--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-route": "^1.5.8",
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "live-server": "^1.1.0",
     "request": "^2.75.0"
   }
 }
